--- a/EFI/grub/x64.cfg
+++ b/EFI/grub/x64.cfg
@@ -41,9 +41,9 @@ insmod jpeg
 if background_image /EFI/grub/background.jpg; then
   true
 else
-  set menu_color_normal=white/black
+  set menu_color_normal=green/black
   set menu_color_highlight=black/light-gray
-  if background_color 255,255,155,0; then
+  if background_color 199,237,204,0; then
     clear
   fi
 fi
@@ -56,6 +56,7 @@ set default=0
 #timeout
 set timeout_style=menu
 set timeout=5
+set background=/EFI/grub/background.jpg
 
 
 #################
